# cats-of-asia

./: .gitignore  Caddyfile  Dockerfile  example.env  manage.py  pyproject.toml
.github/workflows/: main.yml
catsofasia/: asgi.py  settings.py  urls.py  wsgi.py
photos/: admin.py  models.py  urls.py  utils.py  views.py
photos/management/commands/: post_to_mastodon.py
photos/migrations/: 0001_initial.py  0002_alter_coordinates_options_coordinates_point.py  0003_migrate_coordinates_to_point_20240526_0500.py  0004_remove_coordinates_unique_latitude_longitude_altitude_and_more.py
photos/static/photos/: app.js  app_cloudflare_sucks.js  common.js  favorites.js  nearme.js  rpc.js  toast.css  toast.js  upload.js
photos/static/photos/components/: uploader.js
photos/templates/photos/: favorites.html  index.html  nearme.html  upload.html
static/: style.css
templates/: 404.html  base.html
